--- a/css/style.css
+++ b/css/style.css
@@ -489,10 +489,29 @@ a {
     border: none;
 }
 
+.hero a.btn-danger {
+    border-radius: 120px;
+    background-color: #ba0000;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 20px;
+    letter-spacing: 1px;
+    border: none;
+    padding: 12px 20px;
+    margin: 16px 0;
+}
+.hero a.btn-danger:hover {
+    background-color: #e54444;
+}
+
 .btn-dark:hover {
     background-color: var(--accent-color-1);
     color: white;
     border: none;
+}
+.caption-text {
+    font-size: 14px;
+    margin-bottom: 0;
 }
 
 .image-overlay {
@@ -1057,6 +1076,9 @@ img {
 }
 
 @media only screen and (max-width:993px) {
+    .hero a.btn-danger {
+        margin: 16px auto;
+    }
     .hero {
         padding: 15vh 0 5vh;
     }
